--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,7 +3,7 @@
   <head>
     <title>AirBnB clone</title>
   </head>
-  <body>
+  <body style="margin:0; padding: 0;">
     <header style="background-color:#FF0000; height:70px; width:100%;">
     </header>
     <footer style="background-color:#00FF00; bottom: 0; position: absolute; height:60px; width:100%; text-align: center; line-height: 60px;">
