--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -3,6 +3,11 @@
   <head>
     <title>AirBnB clone</title>
     <style>
+    body
+    {
+      padding:0;
+      margin: 0;
+    }
     header
     {
       background-color:#FF0000;
