--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,7 +7,7 @@
     <header style="background-color:#FF0000; height:70px; width:100%;">
     </header>
     <footer style="background-color:#00FF00; bottom: 0; position: absolute; height:60px; width:100%; text-align: center; line-height: 60px;">
-      Holberton School
+      <p>Holberton School</p>
     </footer>
   </body>
 </html>
