--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -30,7 +30,7 @@
     <header>
     </header>
     <footer>
-      Holberton School
+     <p>Holberton School</p>
     </footer>
   </body>
 </html>
