--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/styles/2-common.css">
-    <link rel="stylesheet" href="/styles/2-header.css">
-    <link rel="stylesheet" href="/styles/2-footer.css">
-    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="icon" href="images/icon.png">
     <title>AirBnB clone</title>
   </head>
   <body>
