--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -22,6 +22,12 @@
       height:60px;
       width:100%;
       text-align: center;
+      display: table;
+    }
+    p
+    {
+      display: table-cell;
+      vertical-align: middle;
       line-height: 60px;
     }
     </style>
