--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="4-common.css">
-    <link rel="stylesheet" href="3-footer.css">
-    <link rel="stylesheet" href="3-header.css">
-    <link rel="stylesheet" href="4-filters.css">
-    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
+    <link rel="icon" href="images/icon.png">
     <title>AirBnB clone</title>
   </head>
   <body>
